<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false">

            <ImageView
                android:src="@drawable/playlist2"
                android:contentDescription="@string/playlist2_cover"
                style="@style/ImagesNotMain"/>

            <TextView
                android:text="@string/funky_grooves"
                style="@style/HeadersSecondary"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/download_button"
                android:text="@string/download"
                style="@style/DownloadBuyButtons"/>

            <Button
                android:id="@+id/play_button"
                android:text="@string/play"
                style="@style/PlayButtons"/>
        </LinearLayout>

        <TextView
            android:text="@string/song1_2"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song2_2"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song3_2"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song4_2"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song5_2"
            style="@style/TrackNames"/>

    </LinearLayout>
</ScrollView>