<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/playlist_img"
                android:src="@drawable/playlist1"
                android:contentDescription="@string/playlist1_cover"
                style="@style/ImagesNotMain"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/best_guitar_solos"
                android:layout_marginStart="8dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/download_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/download"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/play_button"
                android:text="@string/play"
                style="@style/PlayButtons"/>
        </LinearLayout>

        <TextView
            android:text="@string/song1"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song2"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song3"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song4"
            style="@style/TrackNames"/>
        <TextView
            android:text="@string/song5"
            style="@style/TrackNames"/>
    </LinearLayout>
</ScrollView>