<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/playlists"
            android:text="@string/playlists"
            style="@style/BigHeaders" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/playlist1"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/playlist1"
                    android:contentDescription="@string/playlist1_cover" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/best_guitar_solos"
                    android:layout_marginEnd="8dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/playlist2"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/playlist2"
                    android:contentDescription="@string/playlist2_cover"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/funky_grooves"
                    android:layout_marginEnd="8dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:text="@string/albums"
            style="@style/BigHeaders" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/album1"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/foofighters_album"
                    android:contentDescription="@string/album1_cover"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/wasting_light"
                    android:layout_marginEnd="8dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/album2"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/rhcp_album"
                    android:contentDescription="@string/album2_cover"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/the_getaway"
                    android:layout_marginEnd="8dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>